# crawler

./: .editorconfig  .gitignore  .nitpick.toml  .pre-commit-config.yaml  README.md  pyproject.toml  requerements.txt  requirements.txt  setup.cfg  test_page.html
.github/workflows/: python.yaml
app/: main.py
app/core/: crawler.py  data_classes.py  schema.py  utils.py
tests/: conftest.py
tests/app/: t.py  test_crawler.py  test_crawler_worker.py  test_main.py  test_utils.py
tests/data/: data.py  git_s.html  test.html
tests/fixtures/: __init__.py  common.py  utils.py
