[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Aleksey <vivera83@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.4"
aiofiles = "23.1.0"
bs4 = "0.0.1"
lxml = "4.9.2"
marshmallow = "3.19.0"
marshmallow-meta = "0.0.1"
nitpick = "0.33.1"
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
pytest-aiohttp = "1.0.4"
pytest-cov = "4.0.0"
aioresponses = "0.7.4"
mock = "^5.0.2"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.8.1"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Faker = "^15.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.dev.dependencies.pytest-xdist]
extras = ["psutil"]
version = "^3.0.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
